sorting bibles by usage